Bug 448442 - Brush editor does not work properly when some brush parameters are locked
Summary: Brush editor does not work properly when some brush parameters are locked
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: testcase, triaged
Depends on:
Blocks:
 
Reported: 2022-01-14 07:41 UTC by thetwo
Modified: 2023-04-19 13:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bug (1000.00 KB, image/gif)
2022-01-14 07:41 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-01-14 07:41:01 UTC
Created attachment 145447 [details]
bug

When I lock one of "blending mode", "opacity" or "flow" and switch to another brush, I find that the other parameters are also locked.
And the brush preview keeps flashing, and some parameters (such as the lock in rotation) are also flashing.
Comment 1 thetwo 2022-01-14 07:47:45 UTC
Added: In "mask brush", locking one parameter will cause all other parameters to be locked
Comment 2 wolthera 2023-01-26 13:31:45 UTC
Hi, thank you for your report.

I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7, very weird.
Comment 3 Dmitry Kazakov 2023-04-19 13:10:25 UTC
Git commit 15efe81d96c6d374aced585c95cb7e557085ee9d by Dmitry Kazakov.
Committed on 19/04/2023 at 13:09.
Pushed by dkazakov into branch 'master'.

Fix unlocking brush properties

We should avoid recursive updates when saving/resetting
locked properties

M  +11   -5    libs/ui/kis_paintop_box.cc
M  +3    -9    libs/ui/kis_paintop_settings_widget.cpp

https://invent.kde.org/graphics/krita/commit/15efe81d96c6d374aced585c95cb7e557085ee9d
Comment 4 Dmitry Kazakov 2023-04-19 13:10:33 UTC
Git commit 65afe12bd50b4f3bb6c048707302f5cd39def016 by Dmitry Kazakov.
Committed on 19/04/2023 at 13:09.
Pushed by dkazakov into branch 'master'.

Fix infinite loop when switching preset with properties locked

We should't call setProperty() in getProperty(), unless the value
actually changed.

M  +8    -2    libs/image/brushengine/kis_locked_properties_proxy.cpp

https://invent.kde.org/graphics/krita/commit/65afe12bd50b4f3bb6c048707302f5cd39def016