Fix infinite loop when switching preset with properties locked

We should't call setProperty() in getProperty(), unless the value
actually changed.

BUG:448442